# SolanaSecurityCopilot

./: .gitignore  README.md  docker-compose.yml  pres.md
backend/: Dockerfile  auth.py  database.py  debug_env.py  list_models.py  main.py  models.py  requirements.txt  reset_db.py  restart_backend.sh  test_ai_service.py  test_gemini.py
backend/routes/: chat.py  github.py  history.py  scan.py
backend/scanner/: __init__.py  analyzer.py  findings.py  parser.py
backend/scanner/rules/: __init__.py  account_ownership.py  arithmetic_overflow.py  base_rule.py  insecure_cpi.py  missing_authority.py  pda_validation.py  signer_validation.py  unsafe_unwrap.py
backend/services/: ai_service.py
frontend/: Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/app/results/: page.tsx
frontend/components/: CodeEditor.tsx  DropZone.tsx  FindingCard.tsx  FindingDetail.tsx  Navbar.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: api.ts
scratch/: list_models.py
test-project/vulnerable-vault/: Cargo.toml
test-project/vulnerable-vault/programs/vulnerable-vault/: Cargo.toml
test-project/vulnerable-vault/programs/vulnerable-vault/src/: governance.rs  lib.rs  staking.rs  vault.rs
